--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,9 +3,9 @@ ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid}
 hostfile = inventory/ec2.py
 remote_user = ec2-user
 become_method = sudo
-private_key_file = inventory/grindaga.pem
+private_key_file = inventory/ansible-deploy-key.pem
 [ssh_connection]
 pipelining = True
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o StrictHostKeyChecking=no
 control_path = /tmp/ansible-ssh-%%h-%%p-%%r
-private_key_file = inventory/grindaga.pem
+private_key_file = inventory/ansible-deploy-key.pem
