--- a/roles/build-composer/tasks/main.yml
+++ b/roles/build-composer/tasks/main.yml
@@ -1,24 +1,3 @@
 ---
-- name: Check that Composer is installed
-  stat: path=/usr/bin/composer
-  register: composer_installed
-
-- name: "Download Composer"
-  become: true
-  command: curl -o installer.php https://getcomposer.org/installer
-  when: composer_installed.stat.exists == False
-
-- name: "Install Composer"
-  become: true
-  command: php -f installer.php
-  when: composer_installed.stat.exists == False
-
-- name: "Make Composer available globally"
-  become: true
-  command: mv composer.phar /usr/bin/composer
-  when: composer_installed.stat.exists == False
-
-- name: "Make Composer executable"
-  become: true
-  command: chmod +x /usr/bin/composer
-  when: composer_installed.stat.exists == False
+- include: 001-install-composer.yml
+  when: composer_build
