--- a/roles/build-composer/tasks/001-install-composer.yml
+++ b/roles/build-composer/tasks/001-install-composer.yml
@@ -18,7 +18,7 @@
   command: mv composer.phar /usr/bin/composer
   when: composer_installed.stat.exists == False
 
-- name: "Make Composer available globally"
+- name: "Make Composer executable"
   become: true
-  command: mv composer.phar /usr/bin/composer
+  command: chmod +x /usr/bin/composer
   when: composer_installed.stat.exists == False
