update example file
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/ansible_config.yaml.example
+++ b/ansible_config.yaml.example
@@ -1,4 +1,4 @@
 ---
 ec2_instance_name: "EC2 INSTANCE NAME TAG"
 full_domain_path: "example: /var/www/vhosts/YOURDOMAIN.com"
-composer_build: true
+composer_build: false
