remove composer install file
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/roles/build-composer/tasks/001-install-composer.yml
+++ b/roles/build-composer/tasks/001-install-composer.yml
@@ -22,3 +22,8 @@
   become: true
   command: chmod +x /usr/bin/composer
   when: composer_installed.stat.exists == False
+
+- name: "Remove Composer install file"
+  become: true
+  command: rm -f installer.php
+  when: composer_installed.stat.exists == False
