--- a/roles/get-hosts/tasks/main.yml
+++ b/roles/get-hosts/tasks/main.yml
@@ -5,8 +5,10 @@
       "tag:Name": "{{ ec2_instance_name }}"
   register: ec2_remote_facts
 
-- name: "Instances found:"
-  debug: var=ec2_remote_facts.id
+- name: Set Default IP Access
+  set_fact:
+    ip_access : "public"
+  when: {{ ip_access }} != "private"
 
 - name: Wait for instances to listen on port 22
   wait_for:
@@ -14,8 +16,24 @@
     host="{{ item.public_ip_address }}"
     port=22
   with_flattened: "{{ ec2_remote_facts.instances }}"
+  when: {{ ip_access }} == "public"
 
 - add_host:
     hostname={{ item.public_ip_address }}
     groupname="ec2hosts"
   with_flattened: "{{ ec2_remote_facts.instances }}"
+  when: {{ ip_access }} == "public"
+
+ name: Wait for instances to listen on port 22
+  wait_for:
+    state=started
+    host="{{ item.private_ip_address }}"
+    port=22
+  with_flattened: "{{ ec2_remote_facts.instances }}"
+  when: {{ ip_access }} == "private"
+
+- add_host:
+    hostname={{ item.private_ip_address }}
+    groupname="ec2hosts"
+  with_flattened: "{{ ec2_remote_facts.instances }}"
+  when: {{ ip_access }} == "private"
