--- a/roles/get-hosts/tasks/main.yml
+++ b/roles/get-hosts/tasks/main.yml
@@ -7,8 +7,8 @@
 
 - name: Set Default IP Access
   set_fact:
-    ip_access : "public"
-  when: {{ ip_access }} != "private"
+    ip_access: public
+  when: ip_access is undefined
 
 - name: Wait for instances to listen on port 22
   wait_for:
@@ -16,13 +16,13 @@
     host="{{ item.public_ip_address }}"
     port=22
   with_flattened: "{{ ec2_remote_facts.instances }}"
-  when: {{ ip_access }} == "public"
+  when: {{ ip_access }} == public
 
 - add_host:
     hostname={{ item.public_ip_address }}
     groupname="ec2hosts"
   with_flattened: "{{ ec2_remote_facts.instances }}"
-  when: {{ ip_access }} == "public"
+  when: {{ ip_access }} == public
 
  name: Wait for instances to listen on port 22
   wait_for:
@@ -30,10 +30,10 @@
     host="{{ item.private_ip_address }}"
     port=22
   with_flattened: "{{ ec2_remote_facts.instances }}"
-  when: {{ ip_access }} == "private"
+  when: {{ ip_access }} == private
 
 - add_host:
     hostname={{ item.private_ip_address }}
     groupname="ec2hosts"
   with_flattened: "{{ ec2_remote_facts.instances }}"
-  when: {{ ip_access }} == "private"
+  when: {{ ip_access }} == private
