--- a/roles/set-variables/tasks/main.yml
+++ b/roles/set-variables/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: Load Environment Variables
-  include_vars: "{{ inventory_dir }}/group_vars/all.yaml"
+  include_vars: "inventory/group_vars/all.yaml"
